--- a/Intel-health-guide-02.html
+++ b/Intel-health-guide-02.html
@@ -36,11 +36,11 @@
                         <a href="index.html"><i class="icon-spinner icon-spin"></i>&nbsp;八大菜系</a></a>
                     </li>
 
-                    <li>
+                    <!-- <li>
                         <a href="cooking-culture-of-China.html">
                             <i class="icon-food"></i> 中国吃文化
                         </a>
-                    </li>
+                    </li> -->
                     <li><a href="food-and-food.html"><i class="icon-coffee"></i> 美食典故</a>
                     </li>
                     <li class="active"><a href="Intel-health-guide.html"><i class="icon-stethoscope"></i> 健康指南</a>
@@ -58,6 +58,53 @@
             <li><a href="Intel-health-guide.html"><i class="icon-coffee"></i> 健康指南</a></li>
             <li class="active">5种新鲜食物是最有效的药</li>
         </ol>
+    </div>
+    <div class="row">
+        <div class="well well-lg item">
+            <p style="text-indent:2em;">
+                美国预防医学专家马克·海曼博士表示，对于某些身体不适来说，新鲜食物是最有效的“药物”。美国《健康》杂志最新载文，刊出可用食物解决的八大健康难题。
+            </p>
+            <h3 style="color: #333;text-align: center;">
+                <b>浮肿：吃芹菜</b>
+            </h3>
+            <p><img src="http://images.meishij.net/p/20160203/99e1e152f7a84e98722c9eeafb2cd0e1.jpg" class="img-responsive img-rounded" alt="5种新鲜食物是最有效的药-1" style="margin: 0 auto"></p>
+             <p style="text-indent:2em;">
+                  《食物与情绪》一书作者伊丽莎白·索默尔博士表示，吃盐过多会使体内水分失衡，导致浮肿。黄瓜、芹菜等食物有助于冲走体内多余的钠，进而缓解浮肿。
+            </p>
+
+            <h3 style="color: #333;text-align: center;">
+                <b>腹胀：吃木瓜</b>
+            </h3>
+            <p><img src="http://images.meishij.net/p/20160203/d312dac91fe3b8c6a79fca739fc897a7.jpg" class="img-responsive img-rounded" alt="5种新鲜食物是最有效的药-2" style="margin: 0 auto"></p>
+             <p style="text-indent:2em;">
+                    胀气可能是肠道功能紊乱的信号。《食物医药》一书作者达尔玛·辛格·卡萨博士表示，饭后胀气可以吃木瓜。木瓜中的消化酶有助分解蛋白质，其纤维素还能促进消化。每周吃几次木瓜可有效调节肠胃功能。
+            </p>
+
+
+            <h3 style="color: #333;text-align: center;">
+                <b>脾气大：及时吃早餐</b>
+            </h3>
+            <p><img src="http://images.meishij.net/p/20160203/d73aea63a13a75956c1a7a35d40d6a76.jpg" class="img-responsive img-rounded" alt="5种新鲜食物是最有效的药-3" style="margin: 0 auto"></p>
+             <p style="text-indent:2em;">
+                   索默尔博士表示，早起后1~2小时内吃早餐的人情绪更稳定，工作效率更高。不吃早餐的人记忆力较差，不到中午就疲倦困乏。早餐应包括全谷食物、蛋白质和1~2种果蔬。此外，研究发现，饮食中缺硒的女性更容易抑郁、焦虑。硒的日推荐量为55毫克，可以从金枪鱼、鸡蛋等食物中获取。
+            </p>
+
+            <h3 style="color: #333;text-align: center;">
+                <b>长青春痘：多吃洋葱</b>
+            </h3>
+            <p><img src="http://images.meishij.net/p/20160203/59c03c0986269b55ec7a298d5e344140.jpg" class="img-responsive img-rounded" alt="5种新鲜食物是最有效的药-4" style="margin: 0 auto"></p>
+             <p style="text-indent:2em;">
+                    美国马萨诸塞州皮肤病学专家瓦洛里·特里罗尔表示，洋葱、韭菜和大葱等富含硫的蔬菜可以遏制导致痤疮的炎症。这类食物最好生吃或者稍微炒一下。
+            </p>
+
+            <h3 style="color: #333;text-align: center;">
+                <b>倒时差：飞行时只喝水</b>
+            </h3>
+            <p><img src="http://images.meishij.net/p/20160203/a65390764465f4534c6251659ef1cf16.jpg" class="img-responsive img-rounded" alt="5种新鲜食物是最有效的药-5" style="margin: 0 auto"></p>
+             <p style="text-indent:2em;">
+                    时差综合征是指在短时间横越多个时区所引发的身体变化，如头痛、耳鸣、心悸、恶心、腹痛、腹泻、生物钟紊乱等。美国阿贡国家实验室戴维·鲍拉克博士建议，跨时区飞行时，除了喝水外，最好别吃太多东西。禁食有助于身体耗费能量储存，次日早晨正常就餐能让你神清气爽。
+            </p>
+        </div>
     </div>
 </div>
 <div class="footer-section">
