--- a/cooking-culture-of-China.html
+++ b/cooking-culture-of-China.html
@@ -41,11 +41,11 @@
                         <a href="index.html"><i class="icon-spinner icon-spin"></i>&nbsp;八大菜系</a>
                     </li>
 
-                    <li  class="active">
-                        <a href="cooking-culture-of-China.html">
-                            <i class="icon-food"></i> 中国吃文化
-                        </a>
-                    </li>
+                   <!--  <li  class="active">
+                       <a href="cooking-culture-of-China.html">
+                           <i class="icon-food"></i> 中国吃文化
+                       </a>
+                   </li> -->
                     <li><a href="food-and-food.html"><i class="icon-coffee"></i> 美食典故</a>
                     </li>
                     <li><a href="Intel-health-guide.html"><i class="icon-stethoscope"></i> 健康指南</a>
